{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 18,
  "lineage": "fb9270b8-6583-7c23-17ee-c5b9b4efa34f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0070c5311b7677678",
            "arn": "arn:aws:ec2:us-east-1:257201957751:instance/i-0b90a5cce95b0d39e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b90a5cce95b0d39e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hw_aca_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d1a2ca27bf0e2a61",
            "private_dns": "ip-10-0-60-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.60.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2d1e5c53a1a4e9e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0489d5eed3ecc12c5",
            "tags": {
              "Name": "HelloWorld"
            },
            "tags_all": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069b425aa554ed151"
            ]
          },
          "dependencies": [
            "aws_key_pair.hw_aca_key",
            "aws_security_group.hw_aca_security_group",
            "aws_subnet.hw_aca_subnet",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hw_aca_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257201957751:internet-gateway/igw-05023b314ac0e61e7",
            "id": "igw-05023b314ac0e61e7",
            "owner_id": "257201957751",
            "tags": {
              "Name": "hw_aca_gw"
            },
            "tags_all": {
              "Name": "hw_aca_gw"
            },
            "vpc_id": "vpc-042e38a48689ebd09"
          },
          "dependencies": [
            "aws_vpc.hw_aca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hw_aca_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257201957751:route-table/rtb-06f140c1c0244af2a",
            "id": "rtb-06f140c1c0244af2a",
            "owner_id": "257201957751",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05023b314ac0e61e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hw_aca_route_table"
            },
            "tags_all": {
              "Name": "hw_aca_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-042e38a48689ebd09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hw_aca_gw",
            "aws_vpc.hw_aca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hw_aca_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fab7eceb18bd4f9e",
            "route_table_id": "rtb-06f140c1c0244af2a",
            "subnet_id": "subnet-0489d5eed3ecc12c5"
          },
          "dependencies": [
            "aws_internet_gateway.hw_aca_gw",
            "aws_route_table.hw_aca_route_table",
            "aws_subnet.hw_aca_subnet",
            "aws_vpc.hw_aca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hw_aca_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257201957751:security-group/sg-069b425aa554ed151",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069b425aa554ed151",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "257201957751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hw_aca_security_group"
            },
            "tags_all": {
              "Name": "hw_aca_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-042e38a48689ebd09"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hw_aca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hw_aca_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257201957751:subnet/subnet-0489d5eed3ecc12c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0489d5eed3ecc12c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257201957751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hw_aca_pb_subnet"
            },
            "tags_all": {
              "Name": "hw_aca_pb_subnet"
            },
            "vpc_id": "vpc-042e38a48689ebd09"
          },
          "dependencies": [
            "aws_vpc.hw_aca_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hw_aca_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257201957751:vpc/vpc-042e38a48689ebd09",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-0c9913a6cf09eaaae",
            "default_route_table_id": "rtb-08e743ab89a67dcfb",
            "default_security_group_id": "sg-0623290b395e2e47b",
            "dhcp_options_id": "dopt-04ec10390d13a62d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-042e38a48689ebd09",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e743ab89a67dcfb",
            "owner_id": "257201957751",
            "tags": {
              "Name": "hw_aca_vpc"
            },
            "tags_all": {
              "Name": "hw_aca_vpc"
            }
          }
        }
      ]
    }
  ]
}